# Ethereal-Engine

./: .env.cmake  .gitignore  CMakeLists.txt  README.md  mingwBuild.bat  setup.bash  setup.bat
Vulkan Engine/: .gitignore  Ethereal_Engine.vcxproj.filters  GameOfLife.h  KeybordInput.cpp  KeybordInput.h  Scene.h  SierpTriangles.h  Vulkan Engine.aps  Vulkan Engine.rc  Vulkan Engine.vcxproj  Vulkan Engine.vcxproj.filters  application.cpp  application.h  ethereal_buffer.cpp  ethereal_buffer.h  ethereal_camera.cpp  ethereal_descriptors.h  ethereal_device.cpp  ethereal_device.h  ethereal_frame_info.h  ethereal_game_obj.cpp  ethereal_game_obj.h  ethereal_model.cpp  ethereal_model.h  ethereal_pipeline.cpp  ethereal_pipeline.h  ethereal_render_system.cpp  ethereal_render_system.h  ethereal_renderer.cpp  ethereal_renderer.h  ethereal_swap_chain.cpp  ethereal_swap_chain.h  ethereal_window.cpp  ethereal_window.h  lightpoint_render_system.cpp  lightpoint_render_system.h  main.cpp
Vulkan Engine/Ethereal_Engine.dir/Release/Ethereal_Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Vulkan Engine/shaders/: compile.bat  fragment_shader.frag  fragment_shader.frag.spv  lightpoint.frag  lightpoint.vert  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  point_light.frag  point_light.frag.spv  point_light.vert.spv  vertex_shader.vert  vertex_shader.vert.spv
Vulkan Engine/shaders/deffered/: deffered.frag  deffered.frag.spv  mrt.frag  mrt.frag.spv  mrt.vert  mrt.vert.spv
Vulkan Engine/src/: main.cpp  resource.h
Vulkan Engine/src/ECS/: ethereal_components.h  ethereal_entity.h  ethereal_game_obj.cpp  ethereal_game_obj.h  ethereal_scene.cpp  ethereal_scene.h  scene.cpp
Vulkan Engine/src/ECS/components/: audio.h  collision.cpp  collision.h  components.h  mesh.h  movement_component.h  pointlight.h  texture.h  transform.cpp  transform.h  unit_gen.h
Vulkan Engine/src/ECS/render systems/: ethereal_render_system.cpp  ethereal_render_system.h  lightpoint_render_system.cpp  lightpoint_render_system.h
Vulkan Engine/src/ECS/systems/: audio_system.cpp  audio_system.h  collision_system.cpp  collision_system.h  mesh_render_system.cpp  mesh_render_system.h  movement_system.cpp  movement_system.h  unit_gen_system.cpp  unit_gen_system.h
Vulkan Engine/src/Frog's Empire/terrain/: terrain.cpp
Vulkan Engine/src/Frog's Empire/unit_gen/: unit_gen_system.cpp  unit_gen_system.h
Vulkan Engine/src/Frog's Empire/units/: collision_component.h  collision_system.cpp  collision_system.h  unit_component.h  unit_system.cpp  unit_system.h
Vulkan Engine/src/core/: application.cpp  application.h  ethereal_device.cpp  ethereal_device.h  ethereal_pipeline.cpp  ethereal_pipeline.h  ethereal_swap_chain.cpp  ethereal_swap_chain.h  ethereal_window.h
Vulkan Engine/src/memory/: ethereal_buffer.h  ethereal_descriptor.cpp  ethereal_descriptors.h  ethereal_frame_info.h
Vulkan Engine/src/render/: ethereal_camera.h  ethereal_model.cpp  ethereal_model.h  ethereal_pipeline.cpp  ethereal_pipeline.h  ethereal_renderer.cpp  ethereal_renderer.h  ethereal_swap_chain.cpp  ethereal_swap_chain.h  ethereal_texture.cpp  ethereal_texture.h
Vulkan Engine/src/render/deffered rendering/: deffered_renderer.cpp  deffered_renderer.h  deffered_swap_chain.cpp  deffered_swap_chain.h
Vulkan Engine/src/render/render systems/: deffered_render_system.cpp  deffered_render_system.h  ethereal_render_system.h  forward_render_system.cpp  forward_render_system.h  lightpoint_render_system.h  point_light_render_system..cpp  point_light_render_system.h
Vulkan Engine/src/resources/: ethereal_model.cpp  ethereal_texture.cpp  ethereal_texture.h
Vulkan Engine/src/utility/: KeybordInput.cpp  KeybordInput.h  open_simplex_noise.h  utils.cpp  utils.h
scripts/: setup.bash  setup.bat
shaders/: mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv
src/: main.cpp
src/ECS/: ethereal_entity.cpp  ethereal_entity.h  ethereal_scene.cpp  ethereal_scene.h
src/ECS/components/: lightpoint.h  tag.h
src/ECS/systems/: mesh_render_system.h  point_light_render_system.h
src/Frog's Empire/terrain/: terrain.cpp  terrain.h
src/Frog's Empire/unit_gen/: unit_gen_component.h  unit_gen_system.cpp
src/core/: application.h  ethereal_pipeline.cpp  ethereal_pipeline.h  ethereal_window.cpp
src/memory/: ethereal_buffer.cpp  ethereal_buffer.h
src/render/: ethereal_camera.cpp  ethereal_model.cpp  ethereal_renderer.cpp  ethereal_texture.cpp
src/utility/: open_simplex_noise.cpp  utils.cpp  utils.h
